--- a/Index7.html
+++ b/Index7.html
@@ -63,7 +63,7 @@
         .content {
             display: none; /* Hide content by default */
             margin-top: 10px;
-            width: 100px;
+            width: 10px;
             height: 5px;
         }
         .footer {
@@ -117,7 +117,7 @@
         </div>
         <div id="images" class="content">
             <h2>Images</h2>
-            <img src="c:/users/TIFOSATOR98/Pictures/nny.jpg" alt="Sample Image">
+            <img src="c:/users/TIFOSATOR98/Pictures/CHHRY.jpg" alt="Sample Image">
         </div>
         <div id="videos" class="content">
             <h2>Videos</h2>
@@ -129,7 +129,7 @@
         <div id="audio" class="content">
             <h2>Audio</h2>
             <audio controls>
-                <source src="c:/users/Tifosator98/music/amazing grace.mp3" type="audio/mp3">
+                <source src="c:/users/Tifosator98/Downloads/Chris Rea  - Wonderful Life -.mp3" type="audio/mp3">
                 Your browser does not support the audio tag.
             </audio>
         </div>
